# vyroom

./: README.md
.claude/: settings.local.json
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: main.py  models.py
backend/app/core/: config.py  cors.py  db.py
backend/app/helpers/: db.py
backend/app/schemas/: __init__.py  models_schemas.py  other_schemas.py  public_schemas.py
frontend/: pnpm-lock.yaml
